--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "terser-webpack-plugin": "^5.3.6",
     "webpack": "^5.61.0",
     "webpack-cli": "^4.0.0",
-    "webpack-merge": "^5.0.0"
+    "webpack-merge": "^5.0.0",
+    "zip-webpack-plugin": "^4.0.1"
   }
 }
