--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,29 +1,26 @@
 {
   "manifest_version": 3,
 
-  "name": "Grab whatsapp group invite links",
-  "description": "Grab whatsapp group invite links",
+  "name": "Grab WhatsApp groups links",
+  "description": "Grab WhatsApp groups links",
   "version": "1.0",
 
-  "options_ui": {
-    "page": "options.html"
-  },
-
   "action": {
-    "default_icon": "icon.png",
+    "default_icon": {
+      "16": "/images/line-16.png",
+      "32": "/images/line-32.png",
+      "48": "/images/line-48.png",
+      "128": "/images/line-128.png"
+    },
     "default_popup": "popup.html"
   },
+
   "icons": {
-    "16": "icon.png",
-    "48": "icon.png",
-   "128": "icon.png"
+    "16": "/images/line-16.png",
+    "32": "/images/line-32.png",
+    "48": "/images/line-48.png",
+    "128": "/images/line-128.png"
   },
-  "content_scripts": [
-      {
-          "matches": ["<all_urls>"],
-          "js": ["js/vendor.js", "js/content_script.js"]
-      }
-  ],
 
   "background": {
     "service_worker": "js/background.js",
@@ -31,23 +28,12 @@
   },
 
   "permissions": [
-    "storage",
     "activeTab",
-    "scripting",
-    "contextMenus"
+    "scripting"
   ],
 
   "host_permissions": [
-    "<all_urls>"
-  ],
-
-  "commands": {
-    "_execute_action": {
-      "suggested_key": {
-        "default": "Ctrl+Shift+W",
-        "mac": "MacCtrl+Shift+W"
-      },
-      "description": "Opens hello.html"
-    }
-  }
+    "https://*/*",
+    "http://*/*"
+  ]
 }
