--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "chrome-extension-typescript-starter",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Grab whatsapp group invite links",
   "main": "index.js",
   "scripts": {
     "watch": "webpack --config webpack/webpack.dev.js --watch",
     "build": "webpack --config webpack/webpack.prod.js",
-    "clean": "rimraf dist",
+    "clean": "rimraf dist*",
     "test": "npx jest",
     "style": "prettier --write \"src/**/*.{js,jsx}\""
   },
