--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,10 @@
 {
-  "trailingComma": "all",
+  "trailingComma": "es5",
   "semi": true,
   "singleQuote": true,
   "arrowParens": "avoid",
-  "printWidth": 120,
+  "printWidth": 140,
   "bracketSameLine": true,
-  "htmlWhitespaceSensitivity": "strict"
+  "htmlWhitespaceSensitivity": "strict",
+  "bracketSpacing": true
 }
