--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chrome-extension-typescript-starter",
-  "version": "4.0.0",
+  "version": "5.0.0",
   "description": "Grab whatsapp group invite links",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
     "build": "webpack --config webpack/webpack.prod.js",
     "clean": "rimraf dist*",
     "test": "npx jest",
-    "style": "prettier --write \"src/**/*.{js,jsx}\""
+    "style": "prettier . --write"
   },
   "author": "",
   "license": "MIT",
@@ -19,10 +19,8 @@
     "bottleneck": "^2.19.5",
     "cheerio": "^1.0.0",
     "p-limit": "^6.2.0",
-    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-ga4": "^2.1.0",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
@@ -30,35 +28,45 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.28.5",
     "@eslint/js": "^9.18.0",
     "@types/chrome": "^0.0.299",
     "@types/jest": "^29.5.14",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
     "babel-loader": "^9.2.1",
+    "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
-    "eslint": "^9.18.0",
+    "css-minimizer-webpack-plugin": "^7.0.4",
+    "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^10.0.1",
+    "eslint-import-resolver-typescript": "^3.7.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "glob": "^11.0.1",
+    "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
+    "mini-css-extract-plugin": "^2.9.2",
     "prettier": "^3.4.2",
     "rimraf": "^6.0.1",
     "style-loader": "^4.0.0",
     "terser-webpack-plugin": "^5.3.11",
     "ts-loader": "^9.5.2",
+    "tsconfig-paths-webpack-plugin": "^4.2.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.21.0",
     "webpack": "^5.97.1",
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0",
     "webpack-merge": "^6.0.1",
     "zip-webpack-plugin": "^4.0.3"
-  }
+  },
+  "sideEffects": false
 }
